# AndroidYuvOsd

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jiangdg/yuvosd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Yuv.cpp  Yuv.h  YuvOsd.c  YuvOsd.cpp  YuvOsd.h
app/src/main/cpp/osd/: Osdchar.c  Osdchar.h
app/src/main/cpp/yuv/: yuv.c  yuv.h
app/src/main/java/com/jiangdg/demo/: MainActivity.java
app/src/main/java/com/jiangdg/demo/runnable/: EncoderAudioRunnable.java  EncoderVideoRunnable.java
app/src/main/java/com/jiangdg/demo/utils/: CameraUtils.java  MediaMuxerUtils.java  SensorAccelerometer.java
app/src/main/java/com/jiangdg/natives/: YuvUtils.java
app/src/main/java/com/jiangdg/yuvosd/: MainActivity.java  YuvUtils.java
app/src/main/java/com/jiangdg/yuvosd/runnable/: EncoderAudioRunnable.java  EncoderVideoRunnable.java
app/src/main/java/com/jiangdg/yuvosd/utils/: CameraUtils.java  MediaMuxerUtils.java  SensorAccelerometer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/jiangdg/yuvosd/: ExampleUnitTest.java
